--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -23,17 +23,17 @@ msgstr "404 Seite nicht gefunden :("
 #: public/views/index.html
 msgid ""
 "<strong>insight</strong>  is an <a href=\"http://live.insight.is/\" target="
-"\"_blank\">open-source Litecoin blockchain explorer</a> with complete REST "
+"\"_blank\">open-source DigiByte blockchain explorer</a> with complete REST "
 "and websocket APIs that can be used for writing web wallets and other apps  "
-"that need more advanced blockchain queries than provided by litecoind RPC.  "
+"that need more advanced blockchain queries than provided by digibyted RPC.  "
 "Check out the <a href=\"https://github.com/bitpay/insight-ui\" target=\"_blank"
 "\">source code</a>."
 msgstr ""
 "<strong>insight</strong> ist ein <a href=\"http://live.insight.is/\" target="
-"\"_blank\">Open Source Litecoin Blockchain Explorer</a> mit vollständigen "
+"\"_blank\">Open Source DigiByte Blockchain Explorer</a> mit vollständigen "
 "REST und Websocket APIs um eigene Wallets oder Applikationen zu "
 "implementieren. Hierbei werden fortschrittlichere Abfragen der Blockchain "
-"ermöglicht, bei denen die RPC des Litecoind nicht mehr ausreichen. Der "
+"ermöglicht, bei denen die RPC des DigiByted nicht mehr ausreichen. Der "
 "aktuelle <a href=\"https://github.com/bitpay/insight-ui\" target=\"_blank"
 "\">Quellcode</a> ist auf Github zu finden."
 
@@ -69,8 +69,8 @@ msgid "Best Block"
 msgstr "Bester Block"
 
 #: public/views/status.html
-msgid "Litecoin node information"
-msgstr "Litecoin-Node Info"
+msgid "DigiByte node information"
+msgstr "DigiByte-Node Info"
 
 #: public/views/block.html
 msgid "Block"
@@ -91,11 +91,11 @@ msgstr "Serialisierte Bytes"
 
 #: public/views/includes/connection.html
 msgid ""
-"Can't connect to litecoind to get live updates from the p2p network. (Tried "
-"connecting to litecoind at {{host}}:{{port}} and failed.)"
+"Can't connect to digibyted to get live updates from the p2p network. (Tried "
+"connecting to digibyted at {{host}}:{{port}} and failed.)"
 msgstr ""
-"Es ist nicht möglich mit Litecoind zu verbinden um live Aktualisierungen vom "
-"P2P Netzwerk zu erhalten. (Verbindungsversuch zu litecoind an {{host}}:"
+"Es ist nicht möglich mit DigiByted zu verbinden um live Aktualisierungen vom "
+"P2P Netzwerk zu erhalten. (Verbindungsversuch zu digibyted an {{host}}:"
 "{{port}} ist fehlgeschlagen.)"
 
 #: public/views/includes/connection.html
@@ -199,8 +199,8 @@ msgid "Last Block"
 msgstr "Letzter Block"
 
 #: public/views/status.html
-msgid "Last Block Hash (Litecoind)"
-msgstr "Letzter Hash (Litecoind)"
+msgid "Last Block Hash (DigiByted)"
+msgstr "Letzter Hash (DigiByted)"
 
 #: public/views/index.html
 msgid "Latest Blocks"
