--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -22,14 +22,14 @@ msgstr "404 Seite nicht gefunden :("
 
 #: public/views/index.html
 msgid ""
-"<strong>insight</strong>  is an <a href=\"http://live.insight.is/\" target="
+"<strong>insight</strong>  is an <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">open-source DigiByte blockchain explorer</a> with complete REST "
 "and websocket APIs that can be used for writing web wallets and other apps  "
 "that need more advanced blockchain queries than provided by digibyted RPC.  "
 "Check out the <a href=\"https://github.com/bitpay/insight-ui\" target=\"_blank"
 "\">source code</a>."
 msgstr ""
-"<strong>insight</strong> ist ein <a href=\"http://live.insight.is/\" target="
+"<strong>insight</strong> ist ein <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">Open Source DigiByte Blockchain Explorer</a> mit vollständigen "
 "REST und Websocket APIs um eigene Wallets oder Applikationen zu "
 "implementieren. Hierbei werden fortschrittlichere Abfragen der Blockchain "
