--- a/po/es.po
+++ b/po/es.po
@@ -22,14 +22,14 @@ msgstr "404 Página no encontrada :("
 
 #: public/views/index.html
 msgid ""
-"<strong>insight</strong>  is an <a href=\"http://live.insight.is/\" target="
+"<strong>insight</strong>  is an <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">open-source DigiByte blockchain explorer</a> with complete REST "
 "and websocket APIs that can be used for writing web wallets and other apps  "
 "that need more advanced blockchain queries than provided by digibyted RPC.  "
 "Check out the <a href=\"https://github.com/bitpay/insight-ui\" target=\"_blank"
 "\">source code</a>."
 msgstr ""
-"<strong>insight</strong>  es un <a href=\"http://live.insight.is/\" target="
+"<strong>insight</strong>  es un <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">explorador de bloques de DigiByte open-source</a> con un completo "
 "conjunto de REST y APIs de websockets que pueden ser usadas para escribir "
 "monederos de DigiBytes y otras aplicaciones que requieran consultar un "
