--- a/po/ja.po
+++ b/po/ja.po
@@ -21,7 +21,7 @@ msgstr "404 ページがみつかりません (´・ω・`)"
 
 #: public/views/index.html
 msgid ""
-"<strong>insight</strong>  is an <a href=\"http://live.insight.is/\" target="
+"<strong>insight</strong>  is an <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">open-source DigiByte blockchain explorer</a> with complete REST "
 "and websocket APIs that can be used for writing web wallets and other apps  "
 "that need more advanced blockchain queries than provided by digibyted RPC.  "
@@ -30,7 +30,7 @@ msgid ""
 msgstr ""
 "<strong>insight</strong>は、digibyted RPCの提供するものよりも詳細なブロック"
 "チェインへの問い合わせを必要とするウェブウォレットやその他のアプリを書くのに"
-"使える、完全なRESTおよびwebsocket APIを備えた<a href=\"http://live.insight."
+"使える、完全なRESTおよびwebsocket APIを備えた<a href=\"http://digiexplorer.info."
 "is/\" target=\"_blank\">オープンソースのビットコインブロックエクスプローラ</"
 "a>です。<a href=\"https://github.com/bitpay/insight-ui\" target=\"_blank\">ソース"
 "コード</a>を確認"
