--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -22,14 +22,14 @@ msgstr "404 Seite nicht gefunden :("
 
 #: public/views/index.html
 msgid ""
-"<strong>insight</strong>  is an <a href=\"http://digiexplorer.info.is/\" target="
+"<strong>DigiExplorer</strong>  is an <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">open-source DigiByte blockchain explorer</a> with complete REST "
 "and websocket APIs that can be used for writing web wallets and other apps  "
 "that need more advanced blockchain queries than provided by digibyted RPC.  "
 "Check out the <a href=\"https://github.com/bitpay/insight-ui\" target=\"_blank"
 "\">source code</a>."
 msgstr ""
-"<strong>insight</strong> ist ein <a href=\"http://digiexplorer.info.is/\" target="
+"<strong>DigiExplorer</strong> ist ein <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">Open Source DigiByte Blockchain Explorer</a> mit vollständigen "
 "REST und Websocket APIs um eigene Wallets oder Applikationen zu "
 "implementieren. Hierbei werden fortschrittlichere Abfragen der Blockchain "
@@ -39,11 +39,11 @@ msgstr ""
 
 #: public/views/index.html
 msgid ""
-"<strong>insight</strong> is still in development, so be sure to report any "
+"<strong>DigiExplorer</strong> is still in development, so be sure to report any "
 "bugs and provide feedback for improvement at our <a href=\"https://github."
 "com/bitpay/insight/issues\" target=\"_blank\">github issue tracker</a>."
 msgstr ""
-"<strong>insight</strong> befindet sich aktuell noch in der Entwicklung. "
+"<strong>DigiExplorer</strong> befindet sich aktuell noch in der Entwicklung. "
 "Bitte sende alle gefundenen Fehler (Bugs) und Feedback zur weiteren "
 "Verbesserung an unseren <a href=\"https://github.com/bitpay/insight-ui/issues"
 "\" target=\"_blank\">Github Issue Tracker</a>."
