--- a/po/es.po
+++ b/po/es.po
@@ -22,14 +22,14 @@ msgstr "404 Página no encontrada :("
 
 #: public/views/index.html
 msgid ""
-"<strong>insight</strong>  is an <a href=\"http://digiexplorer.info.is/\" target="
+"<strong>DigiExplorer</strong>  is an <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">open-source DigiByte blockchain explorer</a> with complete REST "
 "and websocket APIs that can be used for writing web wallets and other apps  "
 "that need more advanced blockchain queries than provided by digibyted RPC.  "
 "Check out the <a href=\"https://github.com/bitpay/insight-ui\" target=\"_blank"
 "\">source code</a>."
 msgstr ""
-"<strong>insight</strong>  es un <a href=\"http://digiexplorer.info.is/\" target="
+"<strong>DigiExplorer</strong>  es un <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">explorador de bloques de DigiByte open-source</a> con un completo "
 "conjunto de REST y APIs de websockets que pueden ser usadas para escribir "
 "monederos de DigiBytes y otras aplicaciones que requieran consultar un "
@@ -38,11 +38,11 @@ msgstr ""
 
 #: public/views/index.html
 msgid ""
-"<strong>insight</strong> is still in development, so be sure to report any "
+"<strong>DigiExplorer</strong> is still in development, so be sure to report any "
 "bugs and provide feedback for improvement at our <a href=\"https://github."
 "com/bitpay/insight/issues\" target=\"_blank\">github issue tracker</a>."
 msgstr ""
-"<strong>insight</strong> esta en desarrollo aún, por ello agradecemos que "
+"<strong>DigiExplorer</strong> esta en desarrollo aún, por ello agradecemos que "
 "nos reporten errores o sugerencias para mejorar el software. <a href="
 "\"https://github.com/bitpay/insight-ui/issues\" target=\"_blank\">Github issue "
 "tracker</a>."
