--- a/po/ja.po
+++ b/po/ja.po
@@ -21,7 +21,7 @@ msgstr "404 ページがみつかりません (´・ω・`)"
 
 #: public/views/index.html
 msgid ""
-"<strong>insight</strong>  is an <a href=\"http://digiexplorer.info.is/\" target="
+"<strong>DigiExplorer</strong>  is an <a href=\"http://digiexplorer.info.is/\" target="
 "\"_blank\">open-source DigiByte blockchain explorer</a> with complete REST "
 "and websocket APIs that can be used for writing web wallets and other apps  "
 "that need more advanced blockchain queries than provided by digibyted RPC.  "
@@ -37,7 +37,7 @@ msgstr ""
 
 #: public/views/index.html
 msgid ""
-"<strong>insight</strong> is still in development, so be sure to report any "
+"<strong>DigiExplorer</strong> is still in development, so be sure to report any "
 "bugs and provide feedback for improvement at our <a href=\"https://github."
 "com/bitpay/insight/issues\" target=\"_blank\">github issue tracker</a>."
 msgstr ""
